--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-DB_HOST='localhost'
+DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME='postgres'
-DB_PASSWORD='workdb123'
-DB_NAME='work_db'
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=teatalk
+JWTKEY=123456
+TOKEN_EXPIRATION=3600
