--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=teatalk
 JWTKEY=123456
 TOKEN_EXPIRATION=48h
 PORT=3000
+DATABASE_URL="postgres://postgres:postgres@localhost:5432/teatalk"
